--- a/1hMgzDLoIavLegbFallOojB1SM5faMohLHSX3iYtkc7w.html
+++ b/1hMgzDLoIavLegbFallOojB1SM5faMohLHSX3iYtkc7w.html
@@ -16,13 +16,13 @@
   </style>
 <body>
 <h2>
-    <span class="glyphicon glyphicon-user" aria-hidden="true"></span> 전체의원 법안발의 건수
+    <span class="glyphicon glyphicon-user" aria-hidden="true"></span> 19대 국회 전체의원 법안발의 정보
     <small>(시험운영중: <a href="mailto:hunkim+ka@gmail.com?Subject=Bug" target="_top">의견 주기</a>)</small>
 </h2>
 <!-- info block -->
 <div ng-hide="errorFlag" class="alert alert-info" role="alert">
-  <strong>법안 발의 건수에 따라 원의 크기가 결졍됩니다. 원을 클릭하시면 자세한 정보를 보실수 있습니다. (색깔은 임의로 표시 하였습니다.)</strong>
-  당의 명이 바뀐경우 이전당과 지금의 당에서 발의한 법안발의는 따로 개수 됩니다.</div>
+  <strong>각 의원 법안 발의 건수에 따라 원의 크기가 결졍됩니다.</strong> (색상은 임의 표시) 원에 마우스를 올리면 당명과 발의법안의 수를 볼수 있고 클릭하면 자세한 정보를 보실수 있습니다.
+  당의 명이 바뀌거나 옮긴경우 이전당과, 현재 소속당에서 발의한 법안은 따로 개수 됩니다.</div>
 <div class="footer navbar-fixed-bottom">
 <div class="alert alert-danger" role="alert">
   <a href="http://likms.assembly.go.kr" class="alert-link text-center"><span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span>
