--- a/in.html
+++ b/in.html
@@ -3,7 +3,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta charset="utf-8">
-    <title>19대 국회 법률안 발의 정보</title>
+    <title>19대 국회 처리된 법률안 발의 정보</title>
     <link rel="shortcut icon" href="favicon.ico" type="image/png">
     <script src="js/angular.1.4.8.min.js"></script>
     <script src="js/jquery-2.1.4.min.js"></script>
@@ -24,7 +24,7 @@
   <table><tr><td class="col-md-9">
   <h2>
     <span class="glyphicon glyphicon-user" aria-hidden="true"></span>
-  {{coArr[0].name}}({{coArr[0].cname}}/{{coArr[0].party}}) 법안발의:{{coArr[0].c}}
+  {{coArr[0].name}}({{coArr[0].cname}}/{{coArr[0].party}}) 처리된 법안발의:{{coArr[0].c}}
       <small>(시험운영중: <a href="mailto:hunkim+ka@gmail.com?Subject=Bug" target="_top">의견 주기</a>)</small>
   </h2>
 </td>
@@ -92,7 +92,7 @@
 <div class="panel panel-default">
   <!-- Default panel contents -->
   <div class="panel-heading">
-    <strong>{{coArr[0].name}}({{coArr[0].cname}}/{{coArr[0].party}})님의 총 {{coArr[0].c}} 법안발의 정보 목록</strong>
+    <strong>{{coArr[0].name}}({{coArr[0].cname}}/{{coArr[0].party}})님의 총 {{coArr[0].c}} 처리된 법안발의 정보 목록</strong>
     (<i class="glyphicon glyphicon-chevron-right" aria-hidden="true">를 클릭하시면 요약정보와 제안자를 보여줍니다.</i>)
   </div>
 </div>
