--- a/1hMgzDLoIavLegbFallOojB1SM5faMohLHSX3iYtkc7w.html
+++ b/1hMgzDLoIavLegbFallOojB1SM5faMohLHSX3iYtkc7w.html
@@ -3,7 +3,7 @@
 <html lang='ko'>
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>19대 국회 법률안 발의 정보</title>
+    <title>19대 국회 처리된 법률안 발의 정보</title>
     <link rel="shortcut icon" href="favicon.ico" type="image/png">
     <script src="js/jquery-2.1.4.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
@@ -21,7 +21,7 @@
 </h2>
 <!-- info block -->
 <div ng-hide="errorFlag" class="alert alert-info" role="alert">
-  <strong>각 의원 법안 발의 건수에 따라 원의 크기가 결졍됩니다.</strong> (색상은 임의 표시) 원에 마우스를 올리면 당명과 발의법안의 수를 볼수 있고 클릭하면 자세한 정보를 보실수 있습니다.
+  <strong>처리된 법안에 대한 정보만 보여 줍니다. 각 의원 법안 발의 건수에 따라 원의 크기가 결졍됩니다.</strong> (색상은 임의 표시) 원에 마우스를 올리면 당명과 발의법안의 수를 볼수 있고 클릭하면 자세한 정보를 보실수 있습니다.
   당의 명이 바뀌거나 옮긴경우 이전당과, 현재 소속당에서 발의한 법안은 따로 개수 됩니다.</div>
 <div class="footer navbar-fixed-bottom">
 <div class="alert alert-danger" role="alert">
