--- a/in.html
+++ b/in.html
@@ -161,7 +161,7 @@
 </button>
 
 <button class="btn btn-sucess" href="http://popong.com/" type="button">
-자료: <span class="badge">의안정보 시스템 @팀포퐁</span>
+자료수집: <span class="badge">by 팀포퐁 Crawler</span>
 </button>
 
 <a href="http://aws.amazon.com">
