--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
   만든이: <span class="badge">hunkim+kp@gmail.com</span>
 </button>
 
-<button class="btn btn-sucess" href="http://likms.assembly.go.kr" type="button">
-자료: <span class="badge">의안정보 시스템</span>
+<button class="btn btn-sucess" href="http://popong.com/" type="button">
+자료수집: <span class="badge">by 팀포퐁 Crawler</span>
 </button>
 
 <a href="http://aws.amazon.com">
