--- a/in.html
+++ b/in.html
@@ -160,9 +160,9 @@
   만든이: <span class="badge">hunkim+ka@gmail.com</span>
 </button>
 
-<button class="btn btn-sucess" href="http://popong.com/" type="button">
+<a href="http://popong.com/"> <button class="btn btn-sucess" type="button">
 자료수집: <span class="badge">by 팀포퐁 Crawler</span>
-</button>
+</button></a>
 
 <a href="http://aws.amazon.com">
 <img src="aws.png"></a>
