--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <html lang='ko'>
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>19대 국회 처리된 법률안 발의 정보</title>
+    <title>19대 국회 법률안 발의 정보</title>
     <link rel="shortcut icon" href="favicon.ico" type="image/png">
     <script src="js/jquery-2.1.4.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
