--- a/in.html
+++ b/in.html
@@ -24,7 +24,7 @@
   <table><tr><td class="col-md-9">
   <h3>
     <span class="glyphicon glyphicon-user" aria-hidden="true"></span>
-  {{coArr[0].name_kr}}({{coArr[0].party}}) {{optString}} 
+  {{coArr[0].name_kr}}({{coArr[0].district}}/{{coArr[0].party}}) {{optString}} 
   <span ng-show="listArr.length>0"> {{listArr.length}}개 법안</span>
       <small>(시험운영중: <a href="mailto:hunkim+ka@gmail.com?Subject=Bug" target="_top">의견 주기</a>)</small>
   </h3>
