--- a/circle.html
+++ b/circle.html
@@ -10,8 +10,25 @@
 <body>
 </body>
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.9/d3.min.js"></script>
+<script src="js/jquery-2.1.4.min.js"></script>
+<script src="js/d3.min.js"></script>
 <script src="js/circle.js"></script>
+
+<script>
+
+var circleFile = "api/order/pass/rep/index.json";
+
+$(window).on('hashchange', function() {
+  var hash = window.location.hash;
+  circleFile = "api/order/" + hash.substring(1) + "/index.json";
+  
+  updateData(circleFile);
+  console.log(circleFile);
+});
+
+
+
+</script>
 
 <!-- Google analytics -->
 <script>
