Added options in the first page

--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
 <h2>
     <span class="glyphicon glyphicon-user" aria-hidden="true"></span> 19대 국회 전체의원 법안발의 정보
 </h2>
-</td><td class="text-right">
-   <div class="input-group text-right vcenter">
+</td><td>
+   <div class="input-group vcenter">
     <angucomplete-alt id="ex1"
             placeholder="의원/지역구 검색"
             selected-object="setActor"
