Added party color

--- a/circle.html
+++ b/circle.html
@@ -16,9 +16,14 @@
 <script src="js/d3.min.js"></script>
 <script src="js/circle.js"></script>
 
+<link rel="stylesheet" href="css/circle.css">
+
+
 <script>
 
-var circleFile = "api/order/pass/rep/index.json";
+var circleFile = "api/order/index.json";
+//var circleFile = "api/order/pass/rep/index.json";
+
 
 $(window).on('hashchange', function() {
   var hash = window.location.hash;
