--- a/index.html
+++ b/index.html
@@ -76,6 +76,57 @@
 </iframe>
 </center>
 
+<!-- 최근 의제 -->
+<a name="list"></a>
+<div cg-busy="{promise:listPromise,message:'최신 법안 정보를 읽고 있습니다...'}"></div>
+<div class="alert alert-info">
+  <!-- Default panel contents -->
+ <!-- <div class="panel-heading"> -->
+    <strong>최근 {{optString}} 총 {{listArr.length}} 법안 목록</strong>
+    (<i class="glyphicon glyphicon-chevron-right" aria-hidden="true">를 클릭하시면 요약정보와 제안자를 보여줍니다.</i>)
+  <!-- </div> -->
+</div>
+
+  <!-- Table -->
+  <table class="table">
+    <tr>
+      <th>#</th>
+      <th>제안일자</th>
+      <th>의안명 (공동발의자수)</th>
+      <th>의결일자</th>
+      <th>의결결과</th>
+    </tr>
+    <!-- http://stackoverflow.com/questions/3076708/can-we-have-multiple-tbody-in-same-table -->
+    <tbody ng-repeat="list in listArr">
+      <tr>
+      <td>{{$index+1}}</td>
+      <td>{{list.proposed_date}}</td>
+      <td>
+        <A target="_blank"
+          href="http://likms.assembly.go.kr/bill/jsp/BillDetail.jsp?bill_id={{list.link_id}}">{{list.title}} ({{list.actor_count}})
+        </A>
+         <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': list.open, 'glyphicon-chevron-right': !list.open}"ng-click="toggleList($index);"/>
+      </td>
+      <td>{{list.decision_date}}</td>
+      <td>{{list.status}}/{{list.status_detail}}</td>
+    </tr>
+    <tr>
+      <!-- http://stackoverflow.com/questions/16389775/twitter-bootstrap-use-collapse-js-on-table-cells-almost-done -->
+    <td ng-show="list.open" colspan="5" class="hiddenRow">
+        <div class="accordion-body" ng-class="{'collapse in':list.open, 'collapse': !list.open}">
+          <span class="glyphicon glyphicon-book" aria-hidden="true"></span>
+             {{printSummary(list.summary);}}<p>
+              제안자: <span ng-repeat="actor in list.ActArr">
+                <a class="btn-xs btn btn-default navbar-btn" ng-click="setId(actor.id);">{{actor.name_kr}}</a>
+                 <!-- <span class="badge">{{actor.c}}</span></a> -->
+              </span>
+          </div>
+    </td>
+  </tr>
+</tbody>
+</table>
+
+
 <div class="footer">
 <div class="alert alert-danger" role="alert">
   <a href="http://likms.assembly.go.kr" class="alert-link text-center"><span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span>
