Added party color

--- a/circle.html
+++ b/circle.html
@@ -21,8 +21,9 @@
 
 <script>
 
-var circleFile = "api/order/index.json";
-//var circleFile = "api/order/pass/rep/index.json";
+//var circleFile = "api/order/index.json";
+var circleFile = "api/order/pass/rep/index.json";
+updateData(circleFile);
 
 
 $(window).on('hashchange', function() {
