--- a/index.html
+++ b/index.html
@@ -92,21 +92,64 @@
     <tr>
       <th>#</th>
       <th>제안일자</th>
-      <th>의안명 (공동발의자수)</th>
+      <th>의안명 </th>
+      <th>대표발의 (공동발의자수)</th>
       <th>의결일자</th>
       <th>의결결과</th>
     </tr>
     <!-- http://stackoverflow.com/questions/3076708/can-we-have-multiple-tbody-in-same-table -->
-    <tbody ng-repeat="list in listArr">
+    <tbody ng-repeat="list in listProposedArr">
       <tr>
       <td>{{$index+1}}</td>
       <td>{{list.proposed_date}}</td>
       <td>
         <A target="_blank"
-          href="http://likms.assembly.go.kr/bill/jsp/BillDetail.jsp?bill_id={{list.link_id}}">{{list.title}} ({{list.actor_count}})
+          href="http://likms.assembly.go.kr/bill/jsp/BillDetail.jsp?bill_id={{list.link_id}}">{{list.title}} 
         </A>
          <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': list.open, 'glyphicon-chevron-right': !list.open}"ng-click="toggleList($index);"/>
       </td>
+      <td>{{list.name_kr}} ({{list.actor_count}})</td>
+      <td>{{list.decision_date}}</td>
+      <td>{{list.status}}/{{list.status_detail}}</td>
+    </tr>
+    <tr>
+      <!-- http://stackoverflow.com/questions/16389775/twitter-bootstrap-use-collapse-js-on-table-cells-almost-done -->
+    <td ng-show="list.open" colspan="5" class="hiddenRow">
+        <div class="accordion-body" ng-class="{'collapse in':list.open, 'collapse': !list.open}">
+          <span class="glyphicon glyphicon-book" aria-hidden="true"></span>
+             {{printSummary(list.summary);}}<p>
+              제안자: <span ng-repeat="actor in list.ActArr">
+                <a class="btn-xs btn btn-default navbar-btn" ng-click="setId(actor.id);">{{actor.name_kr}}</a>
+                 <!-- <span class="badge">{{actor.c}}</span></a> -->
+              </span>
+          </div>
+    </td>
+  </tr>
+</tbody>
+</table>
+
+  <!-- Table -->
+  <table class="table">
+    <tr>
+      <th>#</th>
+      <th>제안일자</th>
+      <th>의안명 </th>
+      <th>대표발의 (공동발의자수)</th>
+      <th>의결일자</th>
+      <th>의결결과</th>
+    </tr>
+    <!-- http://stackoverflow.com/questions/3076708/can-we-have-multiple-tbody-in-same-table -->
+    <tbody ng-repeat="list in listDecisionArr">
+      <tr>
+      <td>{{$index+1}}</td>
+      <td>{{list.proposed_date}}</td>
+      <td>
+        <A target="_blank"
+          href="http://likms.assembly.go.kr/bill/jsp/BillDetail.jsp?bill_id={{list.link_id}}">{{list.title}} 
+        </A>
+         <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': list.open, 'glyphicon-chevron-right': !list.open}"ng-click="toggleList($index);"/>
+      </td>
+      <td>{{list.name_kr}} ({{list.actor_count}})</td>
       <td>{{list.decision_date}}</td>
       <td>{{list.status}}/{{list.status_detail}}</td>
     </tr>
