--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
 <!-- info block -->
 <div class="alert alert-info" role="alert">
-  <strong>각 의원 {{optString}} 법안 발의 건수에 따라 원의 크기가 결졍됩니다.</strong> (색상은 임의 표시.) 원에 마우스를 올리면 당명과 발의법안의 수를 볼수 있고 클릭하면 각 의원의 자세한 정보를 보실수 있습니다.
+  <strong>각 의원 {{optString}} 법안 발의 건수에 따라 원의 크기가 결졍됩니다.</strong> (정당별 색상) 원에 마우스를 올리면 당명과 발의법안의 수를 볼수 있고 클릭하면 각 의원의 자세한 정보를 보실수 있습니다.
 
   <p><strong>의안 선택: </strong>
 
