Added Latest Decision

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 <div cg-busy="{promise:listProposedPromise,message:'최근 발의 정보를 읽고 있습니다...'}"></div>
 <div id="List" class="alert alert-info">
     <strong> 최근 발의 목록 ({{listProposedArr.length}} 건)</strong>
-자세한 자료는 의안 제목이나 의원 이름을 클릭하사면 됩니다.
+더 자세한 자료는 의안 제목이나 의원 이름을 클릭하시면 불수 있습니다.
 </div>
 
   <!-- Table -->
@@ -130,7 +130,7 @@
 <a name="latestdecision"></a>
 <div cg-busy="{listProposedPromise:listPromise,message:'최근 처리 법안 정보를 읽고 있습니다...'}"></div>
 <div class="alert alert-info">
-    <strong>{{optString}} 총 {{listDecisionArr.length}} 최근 처리 의안 목록</strong> 자세한 자료는 의원을 클릭하사면 됩니다 .</i>)
+    <strong>{{optString}} 총 {{listDecisionArr.length}} 최근 처리 의안 목록</strong> 더 자세한 자료는 의안 제목이나 의원 이름을 클릭하시면 불수 있습니다.</i>)
 </div>
 
   <table class="table">
