Added Simple Bill Search

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <script src="js/jquery-2.1.4.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/angucomplete-alt.2.1.0.min.js"></script>
+    <script src="js/angular-busy.min.js"></script>
+
 
     <!-- our app-->
     <script src="js/app-main.js"></script>
@@ -20,6 +22,8 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/angucomplete-alt.css">
     <link rel="stylesheet" href="css/assembly.css">
+    <link rel="stylesheet" href="css/angular-busy.min.css">
+
   </head>
   <style>
   text {
