--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <script src="js/bootstrap.min.js"></script>
     <script src="js/angucomplete-alt.2.1.0.min.js"></script>
     <script src="js/angular-busy.min.js"></script>
-
+    <script src="js/ui-bootstrap-tpls-0.14.3.min.js"></script>
 
     <!-- our app-->
     <script src="js/app-main.js"></script>
@@ -111,7 +111,7 @@
     <div class="input-group">
       <input type="text" class="form-control" ng-model="key" placeholder="의안 제목...">
       <span class="input-group-btn">
-        <button class="btn btn-default" type="button" ng-click="getListSearch();">검색</button>
+        <button class="btn btn-primary" type="button" ng-click="getListSearch();">의안검색</button>
       </span>
       <span>
          <strong>&nbsp;&nbsp;키워드:{{keySearched}} 결과: {{listSearchArr.length}}건 (최대 200건만 보여 줍니다.)</strong>
@@ -139,9 +139,12 @@
         <A target="_blank"
           href="http://likms.assembly.go.kr/bill/jsp/BillDetail.jsp?bill_id={{list.link_id}}">{{list.title}} 
         </A>
-         <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': list.open, 'glyphicon-chevron-right': !list.open}"ng-click="toggleList(listSearchArr, $index);"/>
+         <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': list.open, 'glyphicon-chevron-right': !list.open}"
+            uib-tooltip="요약정보 및 공동발의 의원 보기" 
+            ng-click="toggleList(listSearchArr, $index);"/>
       </td>
-      <td><a class="btn-xs btn btn-default" ng-href="in.html#/{{list.actorid}}">{{list.name_kr}}</a> 외 {{list.actor_count}}명</td>
+      <td><a class="btn-xs btn btn-default" uib-tooltip="{{list.party}}" 
+             ng-href="in.html#/{{list.actorid}}">{{list.name_kr}}</a> 외 {{list.actor_count}}명</td>
       <td>{{list.status}}/{{list.status_detail}}</td>
     </tr>
     <tr>
@@ -150,7 +153,9 @@
             <span class="glyphicon glyphicon-book" aria-hidden="true"></span>
                {{printSummary(list.summary);}}<p>
                 제안자: <span ng-repeat="actor in list.ActArr">
-                  <a class="btn-xs btn btn-default navbar-btn" ng-click="setId(actor.id);">{{actor.name_kr}}</a>
+                  <a class="btn-xs btn btn-default navbar-btn" 
+                  uib-tooltip="{{actor.party}}" 
+                  ng-href="in.html#/{{actor.id}}">{{actor.name_kr}}</a>
                    <!-- <span class="badge">{{actor.c}}</span></a> -->
             </span>
           </div>
@@ -186,18 +191,23 @@
         <A target="_blank"
           href="http://likms.assembly.go.kr/bill/jsp/BillDetail.jsp?bill_id={{list.link_id}}">{{list.title}} 
         </A>
-         <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': list.open, 'glyphicon-chevron-right': !list.open}"ng-click="toggleList(listProposedArr, $index);"/>
+         <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': list.open, 'glyphicon-chevron-right': !list.open}" 
+            uib-tooltip="요약정보 및 공동발의 의원 보기" 
+            ng-click="toggleList(listProposedArr, $index);"/>
       </td>
-      <td><a class="btn-xs btn btn-default" ng-href="in.html#/{{list.actorid}}">{{list.name_kr}}</a> 외 {{list.actor_count}}명</td>
+      <td><a class="btn-xs btn btn-default" uib-tooltip="{{list.party}}" 
+             ng-href="in.html#/{{list.actorid}}">{{list.name_kr}}</a> 외 {{list.actor_count}}명</td>
       <td>{{list.status}}/{{list.status_detail}}</td>
     </tr>
       <tr>
-       <td ng-show="list.open" colspan="5" class="hiddenRow">
+       <td ng-show="list.open" colspan="6" class="hiddenRow">
           <div class="accordion-body" ng-class="{'collapse in':list.open, 'collapse': !list.open}">
             <span class="glyphicon glyphicon-book" aria-hidden="true"></span>
                {{printSummary(list.summary);}}<p>
                 제안자: <span ng-repeat="actor in list.ActArr">
-                  <a class="btn-xs btn btn-default navbar-btn" ng-click="setId(actor.id);">{{actor.name_kr}}</a>
+                  <a class="btn-xs btn btn-default navbar-btn" 
+                     uib-tooltip="{{actor.party}}" 
+                     ng-href="in.html#/{{actor.id}}">{{actor.name_kr}}</a>
                    <!-- <span class="badge">{{actor.c}}</span></a> -->
             </span>
           </div>
@@ -230,18 +240,23 @@
         <A target="_blank"
           href="http://likms.assembly.go.kr/bill/jsp/BillDetail.jsp?bill_id={{list.link_id}}">{{list.title}} 
         </A>
-             <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': list.open, 'glyphicon-chevron-right': !list.open}"ng-click="toggleList(listDecisionArr, $index);"/>
+             <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': list.open, 'glyphicon-chevron-right': !list.open}"
+                uib-tooltip="요약정보 및 공동발의 의원 보기" 
+                ng-click="toggleList(listDecisionArr, $index);"/>
       </td>
-      <td><a class="btn-xs btn btn-default" ng-href="in.html#/{{list.actorid}}">{{list.name_kr}}</a> 외 {{list.actor_count}}명</td>
+      <td><a class="btn-xs btn btn-default" uib-tooltip="{{list.party}}" 
+             ng-href="in.html#/{{list.actorid}}">{{list.name_kr}}</a> 외 {{list.actor_count}}명</td>
       <td>{{list.status}}/{{list.status_detail}}</td>
   </tr>
     <tr>
-       <td ng-show="list.open" colspan="5" class="hiddenRow">
+       <td ng-show="list.open" colspan="6" class="hiddenRow">
           <div class="accordion-body" ng-class="{'collapse in':list.open, 'collapse': !list.open}">
             <span class="glyphicon glyphicon-book" aria-hidden="true"></span>
                {{printSummary(list.summary);}}<p>
                 제안자: <span ng-repeat="actor in list.ActArr">
-                  <a class="btn-xs btn btn-default navbar-btn" ng-click="setId(actor.id);">{{actor.name_kr}}</a>
+                  <a class="btn-xs btn btn-default navbar-btn" 
+                     uib-tooltip="{{actor.party}}" 
+                     ng-href="in.html#/{{actor.id}}">{{actor.name_kr}}</a>
                    <!-- <span class="badge">{{actor.c}}</span></a> -->
             </span>
           </div>
@@ -253,7 +268,8 @@
 
 <div class="footer">
 <div class="alert alert-danger" role="alert">
-  <a href="http://likms.assembly.go.kr" class="alert-link text-center"><span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span>
+  <a href="http://likms.assembly.go.kr" class="alert-link text-center">
+  <span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span>
     이 사이트가 보여주는 자료는 프로그램의 버그등으로 인해 오류가 있을수 있습니다. 정확한 자료는 의안정보 시스템에서 반드시 확인하세요.</a>
 </div>
 
